fixed overflow issue in profile edit on sm devices

--- a/src/index.css
+++ b/src/index.css
@@ -824,6 +824,11 @@
   font-size: 14px;
 }
 
+.profileImagesChangeButton{
+  bottom: 20px;
+  left: 35px;
+}
+
 .personalization-and-data-person-text-Tweeter-will {
   border-bottom: var(--homeBorder);
 }
